# Grocery

./: .env  .gitignore  CLAUDE.md  COLLECTION_INFO.md  Cargo.toml  README.md  grocery-orders-history.md  last-order-items.md  periodic-household-items.md  preferred-items-reference.md  recipe-links.json  start-grocery-session.sh  weekly-staples-list.md
crates/grocery-cli/: Cargo.toml
crates/grocery-cli/src/: main.rs
crates/grocery-cli/src/commands/: chat.rs  chat_tests.rs  mod.rs  plan.rs  score.rs  status.rs
crates/grocery-core/: Cargo.toml
crates/grocery-core/src/: error.rs  household.rs  household_tests.rs  item.rs  lib.rs  recipe.rs  recipe_tests.rs  scoring.rs  scoring_tests.rs  types.rs  types_tests.rs
crates/grocery-list/: Cargo.toml
crates/grocery-list/src/: consolidator.rs  consolidator_tests.rs  formatter.rs  formatter_tests.rs  generator.rs  generator_tests.rs  lib.rs
crates/grocery-recipes/: Cargo.toml
crates/grocery-recipes/src/: collection.rs  collection_tests.rs  lib.rs  matcher.rs  matcher_tests.rs  scorer.rs  scorer_tests.rs
